a tag new tab open

--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -7,3 +7,4 @@
 
 <input type="hidden" id="org_markdown" value="<%= @org_markdown %>">
 <%= javascript_pack_tag 'toast_ui_viewer' %>
+<%= javascript_pack_tag 'a_tag_open_other_tab' %>
