--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -67,6 +67,11 @@
         <% end %>
       </div>
     </div>
+    <div class="tag-container">
+      <% (micropost.all_tags).each do |tag| %> 
+        <%= link_to tag, microposts_path(tag: tag) %>
+      <% end %>
+    </div>
     <span class="timestamp">
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
       <% if current_user?(micropost.user) %>
