--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -2,6 +2,15 @@
 
 <h1><%= @title %></h1>
 
+<div class="tag_select_research">
+  <%= render partial: 'microposts/tag_research_form', locals: { click_tag: @click_tag, school_type: @school_type } %>
+</div>
+
+<h4 class="inline-block">タグ</h4>
+<% @tags.each do |tag| %>
+  <%= link_to "#{tag.name}", microposts_path(tag: tag.name) %>
+<% end %>
+
 <ol class="microposts">
   <%= render @feedall %>
 </ol>
