--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1139,6 +1139,10 @@ span.image {
     width: auto;
     display: inline-block;
   }
+  .bootstrap-tagsinput {
+    width: 100%;
+  //   input { width: 100%; }
+  }
 }
 
 
