--- a/app/views/microposts/add_search_tag.js.erb
+++ b/app/views/microposts/add_search_tag.js.erb
@@ -1,6 +1,1 @@
-var tags = $("#micropost_tags").val();
-if (tags.length === 0 ) {
-  $("#micropost_tags").val("<%= @tag %>");
-} else {
-  $("#micropost_tags").val(`${tags},<%= @tag %>`);
-}
+$('#micropost_tags').tagsinput('add', "<%= @tag %>");
