--- a/app/views/microposts/get_selected_school_type.js.erb
+++ b/app/views/microposts/get_selected_school_type.js.erb
@@ -9,6 +9,7 @@
 <% unless category == "" %>
   $("#micropost_subject").html("<%= escape_javascript(options_for_select(Tag.where("category LIKE ?", "%#{category}%").pluck(:name))) %>");
   $("#micropost_subject").prepend('<option value="">教科タグ</option>');
+  $('#micropost_tags').tagsinput('add', "<%= @selected_school_type %>");
 <% else %>
   $("#micropost_subject").html('<option value="">---</option>');
 <% end %>
