--- a/app/assets/stylesheets/bootstrap-tagsinput.scss
+++ b/app/assets/stylesheets/bootstrap-tagsinput.scss
@@ -23,7 +23,7 @@
   background-color: transparent;
   padding: 0 6px;
   margin: 0;
-  width: auto;
+  width: 10em;  // default: auto
   max-width: inherit;
 }
 .bootstrap-tagsinput.form-control input::-moz-placeholder {
