--- a/app/views/microposts/_tag_search_form.html.erb
+++ b/app/views/microposts/_tag_search_form.html.erb
@@ -11,24 +11,34 @@
     <% else                   category = "" %>
     <% end %>
     <%= f.select :subject, Tag.where("category LIKE ?", "%#{category}%").pluck(:name), include_blank: "教科タグ", selected: selected_subject %>
-    <div class="field">
-      <%= f.text_field :tags, placeholder: "タグ", value: selected_tags, data: {role: "tagsinput"} %>
+    <div class="tag_search_wrap">
+      <div class="input-group">
+        <%= f.text_field :tags, placeholder: "タグ", value: selected_tags, data: {role: "tagsinput"} %>
+        <span class="input-group-btn">
+          <%= button_tag type: "submit", class: 'btn btn-search' do %>
+            <i class="fas fa-search"></i>
+          <% end %>
+        </span>
+      </div>
     </div>
     <% @tags.each do |tag| %>
       <%= link_to "#{tag.name}", add_search_tag_microposts_path(tag: tag.name), remote: true %>
     <% end %>
-    <p>※ タグの区切りは半角カンマ（ , ）か Enter</p>
-    <%= f.submit '検索', id: "tag_search_submit" %>
   <% else %>
     <%= f.select :school_type, school_types, include_blank: "校種タグ" %>
     <%= f.select :subject, "", include_blank: "---" %>
-    <div class="field">
-      <%= f.text_field :tags, placeholder: "タグ", value: "", data: {role: "tagsinput"} %>
+    <div class="tag_search_wrap">
+      <div class="input-group">
+        <%= f.text_field :tags, placeholder: "タグ", value: "", data: {role: "tagsinput"} %>
+        <span class="input-group-btn">
+          <%= button_tag type: "submit", class: 'btn btn-search' do %>
+            <i class="fas fa-search"></i>
+          <% end %>
+        </span>
+      </div>
     </div>
     <% @tags.each do |tag| %>
       <%= link_to "#{tag.name}", add_search_tag_microposts_path(tag: tag.name), remote: true %>
     <% end %>
-    <p>※ タグの区切りは半角カンマ（ , ）か Enter</p>
-    <%= f.submit '検索', id: "tag_search_submit" %>
   <% end %>
 <% end %>
