create partial of content_search_form

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,18 +22,7 @@
     </button>
     <div class="navbar-header">
       <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "51px"), root_path, id: "service_logo" %>
-      <span class="content_search_form inline-block">
-        <%= search_form_for @search_microposts, url: microposts_path do |f| %>
-          <div class="input-group">
-            <%= f.search_field :content_cont, placeholder: "教材を検索", class: "form-control" %>
-            <span class="input-group-btn">
-              <%= button_tag type: "submit", class: 'btn btn-search' do %>
-                <i class="fas fa-search"></i>
-              <% end %>
-            </span>
-          </div>
-        <% end %>
-      </span>
+      <%= render partial: 'layouts/content_search_form', locals: { search_microposts: @search_microposts } %>
     </div>
     <nav role="navigation">
       <div class="navbar-offcanvas navbar-offcanvas-touch navbar-offcanvas-right" id="js-bootstrap-offcanvas">
