--- a/app/views/microposts/_micropost_form.html.erb
+++ b/app/views/microposts/_micropost_form.html.erb
@@ -6,8 +6,8 @@
     <%= f.text_area :content, placeholder: "#{current_user.name} さん、今日はどのような一日？" %>
   </div>
   <div class="tagging-form">
-    <%= f.select :school_type, school_types, include_blank: "校種タグ" %>
-    <%= f.select :subject, "", include_blank: "---" %>
+    <%= f.select :school_type, school_types, { include_blank: "校種タグ" }, class: "form-control" %>
+    <%= f.select :subject, "", { include_blank: "---" }, class: "form-control" %>
     <div class="field">
       <%= f.text_field :tags, placeholder: "タグ", value: "", data: {role: "tagsinput"} %>
     </div>
