--- a/app/views/microposts/_tag_search_form.html.erb
+++ b/app/views/microposts/_tag_search_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_with model: Micropost.new, url: microposts_path, method: :get do |f| %>
   <% if selected_school_type %>
-    <%= f.select :school_type, school_types, include_blank: "校種タグ", selected: selected_school_type %>
+    <%= f.select :school_type, school_types, { include_blank: "校種タグ", selected: selected_school_type }, class: "form-control" %>
     <% case selected_school_type %>
     <% when "小学校"     then category = "primary_subject" %>
     <% when "中学校"     then category = "secondary_subject" %>
@@ -10,10 +10,10 @@
     <% when "高校(専門)" then category = "senior_specialized_subject" %>
     <% else                   category = "" %>
     <% end %>
-    <%= f.select :subject, Tag.where("category LIKE ?", "%#{category}%").pluck(:name), include_blank: "教科タグ", selected: selected_subject %>
+    <%= f.select :subject, Tag.where("category LIKE ?", "%#{category}%").pluck(:name), { include_blank: "教科タグ", selected: selected_subject }, class: "form-control" %>
   <% else %>
-    <%= f.select :school_type, school_types, include_blank: "校種タグ" %>
-    <%= f.select :subject, "", include_blank: "---" %>
+    <%= f.select :school_type, school_types, { include_blank: "校種タグ" }, class: "form-control" %>
+    <%= f.select :subject, "", { include_blank: "---" }, class: "form-control" %>
   <% end %>
   <div class="tag_search_wrap">
     <div class="input-group">
