--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -124,6 +124,10 @@ a {
   color:#7F8C8D ;
 }
 
+.bootstrap-tagsinput {
+  span { font-size: 1em; }
+}
+
 // 検索窓
 .input-group {
   display: inline-table;
@@ -145,7 +149,6 @@ a {
     font-size: 14px;
   }
 }
-
 
 span.user a {
   color: #34495E;
