--- a/app/views/users/portcurio.html.erb
+++ b/app/views/users/portcurio.html.erb
@@ -2,6 +2,10 @@
 
 <h1>My Portcurio</h1>
 
+<div class="tagging-form">
+  <%= render partial: 'microposts/tag_search_form', locals: { selected_school_type: @selected_school_type, selected_subject: @selected_subject, selected_tags: @selected_tags, tags: @tags } %>
+</div>
+
 <ol class="microposts">
   <%= render @portcurio %>
 </ol>
