fix bug conflict tag with slide

--- a/app/views/slides/destroy.js.erb
+++ b/app/views/slides/destroy.js.erb
@@ -1,5 +1,3 @@
-$micropost_content = $(".micropost_form > form > .field > #micropost_content").val()
-
-$(".micropost_form").html("<%= escape_javascript(render partial: 'microposts/micropost_form') %>")
-
-$(".micropost_form > form > .field > #micropost_content").val($micropost_content)
+$("#micropost_file_type").val("")
+$("#micropost_file_link").val("")
+$(".slide_post .file_type").html("")
