--- a/app/views/slides/create.js.erb
+++ b/app/views/slides/create.js.erb
@@ -1,10 +1,7 @@
 $(".slide_post_modal").html("")
 
-$micropost_content = $(".micropost_form > form > .field > #micropost_content").val()
-
-$(".micropost_form").html("<%= escape_javascript(render partial: 'microposts/micropost_form') %>")
-
-$(".micropost_form > form > .field > #micropost_content").val($micropost_content)
+$("#micropost_file_type").val("<%= @micropost.file_type %>")
+$("#micropost_file_link").val('<%= @micropost.file_link %>')
 
 <%# $(".slide_post > .file_type").html('<%= @micropost.file_type % <%= link_to microposts_slides_path, remote: true, class: "btn-link", method: :delete do %<i class="far fa-times-circle"></i><% end %') %>
 $(".slide_post > .file_type").html('<%= link_to microposts_slides_path, remote: true, class: "btn-link", method: :delete do %><i class="far fa-times-circle"></i><% end %>')
