--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -356,12 +356,22 @@ aside {
   }
 }
 
-.gravator_frame {
+.profile_icon_frame {
   position: relative;
   display: block;
   float: left;
-  width: 60px;
-  height: 55px;
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+  }
   .gravatar {
     float: left;
     margin-right: 10px;
@@ -373,20 +383,38 @@ aside {
   }
 }
 
-.gravatar_edit {
-  margin-top: 15px;
-  .gravator_frame {
-    width: 90px;
+.profile_icon_edit {
+  height: 80px;
+  margin: 15px 0;
+  .profile_icon_frame {
+    width: 80px;
     height: 80px;
+    img {
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+    }
+  }
+  .image { 
+    line-height: 80px;
+    margin: 0;
+    padding: 0;
   }
   a { line-height: 80px; }
 }
 
 .user_info.user_show {
   margin: 24px 0 8px;
-  .gravator_frame {
-    width: 90px;
+  .profile_icon_frame {
+    width: 80px;
     height: 80px;
+    img {
+      border-radius: 50%;
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+    }
   }
   h1 {
     font-size: 2rem;
@@ -399,10 +427,6 @@ aside {
 
 .user_info.user_follow {
   margin: 24px 0 8px;
-  .gravator_frame {
-    width: 60px;
-    height: 50px;
-  }
   h1 {
     font-size: 2rem;
     text-align: left;
@@ -451,7 +475,7 @@ aside {
 
 .user_avatars {
   padding-left: 30px;
-  .gravator_frame {
+  .profile_icon_frame {
     width: 32px;
     height: 32px;
     .gravatar {
