--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,7 +1,7 @@
 <li class="micropost-<%= micropost.id %>">
   <div class="micropost-container">
-    <span class='gravator_frame'>
-      <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
+    <span class='profile_icon_frame'>
+      <%= micropost.user.image.attached? ? (link_to image_tag(micropost.user.image), micropost.user) : (link_to gravatar_for(micropost.user), micropost.user) %>
     </span>
     <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
     
