--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,5 +1,5 @@
-<span class='gravator_frame'>
-  <%= link_to gravatar_for(current_user, size: 50), current_user %>
+<span class='profile_icon_frame'>
+  <%= current_user.image.attached? ? (link_to image_tag(current_user.image), current_user) : (link_to gravatar_for(current_user), current_user) %>
 </span>
 <h1><%= current_user.name %></h1>
 <span><%= link_to "view my profile", current_user %></span>
