--- a/app/views/users/delete.html.erb
+++ b/app/views/users/delete.html.erb
@@ -13,8 +13,8 @@
   <%= f.submit "Send email to delete the account", class: "btn btn-primary", data: { confirm: "You sure?" }, remote: true %>
 <% end %>
 
-<div class="gravatar_edit">
-  <span class='gravator_frame'>
-    <%= gravatar_for @user %>
+<div class="profile_icon_edit">
+  <span class='profile_icon_frame'>
+    <%= @user.image.attached? ? (image_tag @user.image) : (gravatar_for @user) %>
   </span>
 </div>
