--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -445,7 +445,7 @@ aside {
   overflow: auto;
   margin-top: 0;
   margin-bottom: 8px;
-  padding-left: 45px;
+  padding-left: 30px;
   a {
     float: left;
     padding: 0 10px;
@@ -480,6 +480,12 @@ aside {
     height: 32px;
     .gravatar {
       margin: 1px 1px;
+      width: 30px;
+      height: 30px;
+    }
+    img {
+      width: 30px;
+      height: 30px;
     }
   }
   overflow: auto;
