--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -445,7 +445,7 @@ aside {
   overflow: auto;
   margin-top: 0;
   margin-bottom: 8px;
-  padding-left: 30px;
+  padding-left: 48px;
   a {
     float: left;
     padding: 0 10px;
@@ -470,6 +470,9 @@ aside {
   padding-bottom: 16px;
   margin-bottom: 8px;
   border-bottom: 1px solid gray;
+  div.stats {
+    padding-left: 34px;
+  }
 }
 
 
@@ -478,12 +481,14 @@ aside {
   .profile_icon_frame {
     width: 32px;
     height: 32px;
+    margin: 1px;
     .gravatar {
-      margin: 1px 1px;
+      margin: 1px;
       width: 30px;
       height: 30px;
     }
     img {
+      margin: 1px;
       width: 30px;
       height: 30px;
     }
