--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -37,6 +37,9 @@
   <%= f.label :profile %>
   <%= f.text_area :profile, placeholder: "プロフィールを入力しましょう（600文字以内）", class: 'form-control' %>
 
+  <%= f.label :website %>
+  <%= f.text_field :website, placeholder: "255文字以内", class: 'form-control' %>
+
   <div class="line-checkbox-wrap">
     <%= f.label :line_connection_delete do %>
       <% if current_user.lineuid %>
